# some_tasks

Busy Beaver/: README.md  main.cpp  turingmachine.cpp  turingmachine.h
Calendar/: README.md  solution.cpp
Converter/: README.md  solution.cpp
Crockford's Base32/: README.md  solution.cpp
DateTime library/: README.md  datetime.cpp  datetime.h  main(test).cc  makefile
Day of week/: README.md  solution.cpp
Gauss circle problem (A000328)/: README.md  solution.cpp
Hexview/: hexview.hex  solution.cpp
Inverted tower problem/: README.md  solution.cpp
Matrixcalc/: README.md  solution.cpp
RSA & BigInteger/: CMakeLists.txt  README.md  biginteger.cpp  biginteger.hpp  decode.cpp  tests.cc
Romancalc/: solution.cpp
Stock Exchange/: README.md  database.cpp  database.h  datetime.cpp  datetime.h  makefile  stockexchange.cpp
